testsuite/tests/linear/should_fail/all.T
broken_multiplicity_syntax = 94  # https://github.com/tweag/ghc/issues/94

test('TypeClass', normal, compile_fail, [''])
test('Linear11', normal, compile_fail, [''])
test('Linear13', normal, compile_fail, [''])
test('Linear17', normal, compile_fail, [''])
test('Linear1', normal, compile_fail, [''])
test('Linear2', normal, compile_fail, [''])
test('Linear5', normal, compile_fail, [''])
test('Linear7', normal, compile_fail, [''])
test('Linear9', normal, compile_fail, [''])
test('LinearNoExt', normal, compile_fail, [''])
test('LinearAsPat', normal, compile_fail, [''])
test('LinearLet', normal, compile_fail, [''])
test('LinearLazyPat', normal, compile_fail, [''])
test('LinearRecordUpdate', normal, compile_fail, [''])
test('LinearSeq', normal, compile_fail, [''])
test('LinearViewPattern', normal, compile_fail, [''])
test('LinearConfusedDollar', normal, compile_fail, [''])
test('LinearPatSyn', normal, compile_fail, [''])
test('LinearGADTNewtype', normal, compile_fail, [''])
test('LinearPartialSig', expect_broken(broken_multiplicity_syntax), compile_fail, [''])
test('LinearKind', normal, compile_fail, [''])
test('LinearVar', expect_broken(broken_multiplicity_syntax), compile_fail, [''])
test('LinearErrOrigin', expect_broken(broken_multiplicity_syntax), compile_fail, [''])
test('LinearPolyType', expect_broken([436, broken_multiplicity_syntax]), compile_fail, [''])  # not supported yet (#354)
test('LinearBottomMult', normal, compile_fail, [''])
test('LinearSequenceExpr', normal, compile_fail, [''])
test('LinearIf', normal, compile_fail, [''])
test('LinearPatternGuardWildcard', normal, compile_fail, [''])
test('LinearFFI', normal, compile_fail, [''])
